--- a/configurator/configurator/Views/MainWindow.xaml
+++ b/configurator/configurator/Views/MainWindow.xaml
@@ -1,18 +1,19 @@
-﻿<Window x:Class="configurator.MainWindow"
+﻿<Window x:Class="configurator.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:configurator"
+        xmlns:views="clr-namespace:configurator.Views"
         mc:Ignorable="d"
         Title="Dr. Ajectory Configurator" Height="400" Width="500" MaxHeight="400" MaxWidth="500"
         WindowStartupLocation="CenterScreen">
     <TabControl>
         <TabItem Header="Dr. Ajectory Settings">
-            <local:SettingsTab></local:SettingsTab>
+            <views:SettingsTab></views:SettingsTab>
         </TabItem>
         <TabItem Header="About">
-            <local:AboutTab></local:AboutTab>
+            <views:AboutTab></views:AboutTab>
         </TabItem>
 
     </TabControl>
