--- a/configurator/configurator/Views/SettingsTab.xaml
+++ b/configurator/configurator/Views/SettingsTab.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="configurator.SettingsTab"
+﻿<UserControl x:Class="configurator.Views.SettingsTab"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
